[gd_scene load_steps=3 format=3 uid="uid://bpcvi4fu31gtf"]

[ext_resource type="Script" path="res://HUD.gd" id="1_f1x82"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yfax1"]
bg_color = Color(0.937255, 0.94902, 1, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_f1x82")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -59.5
offset_right = 104.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Ace Combat"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -220.0
offset_right = 50.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0.0117647, 0.0117647, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yfax1")
text = "Start!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
